<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.main.withdraw.WithdrawFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/App.Toolbar"
        app:title="@string/title_withdraw_fragment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPassword"
                style="@style/App.EditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/App.EditText"
                android:hint="@string/address"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/etValue"
                style="@style/App.EditText"
                android:hint="@string/value"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" />

            <io.usoamic.wallet.custom.edit.EditGasPrice
                android:id="@+id/etTxSpeed"
                style="@style/App.EditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etValue" />

            <Button
                android:id="@+id/btnWithdrawEth"
                style="@style/App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_eth"
                app:layout_constraintBottom_toTopOf="@+id/btnWithdrawUso"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnWithdrawUso"
                style="@style/App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_uso"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/pbContainer"
            layout="@layout/layout_progress_bar"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>