<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.auth.add.AddFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/App.Toolbar"
        app:title="@string/title_add_not_fragment" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPassword"
                style="@style/App.EditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <io.usoamic.app.custom.edit.SelectEditText
                android:id="@+id/etType"
                style="@style/App.EditText"
                android:hint="@string/note_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/etContent"
                style="@style/App.EditText"
                android:hint="@string/note_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etType" />

            <io.usoamic.app.custom.edit.EditGasPrice
                android:id="@+id/etTxSpeed"
                style="@style/App.EditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etContent" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/pbContainer"
            layout="@layout/layout_progress_bar"
            tools:visibility="invisible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>