<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add.AddFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/App.Toolbar"
        app:title="@string/add_fragment_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainer"
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etAddress"
            style="@style/App.EditText"
            android:hint="@string/address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPrivateKey"
            style="@style/App.EditText"
            android:hint="@string/private_key"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAddress" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/pbContainer"
        layout="@layout/layout_progress_bar"
        tools:visibility="invisible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>