<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".ui.auth.auth.AuthFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/App.Toolbar"
        app:title="@string/title_auth_fragment" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/tvVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/message"
                    style="@style/App.Icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:text="@string/title" />

                <Button
                    android:id="@+id/addBtn"
                    style="@style/App.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_account" />

                <Button
                    android:id="@+id/createBtn"
                    style="@style/App.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_indent"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="v1.0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/pbContainer"
            layout="@layout/layout_progress_bar"
            tools:visibility="invisible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


